# serializer version: 1
# name: TestYmirGenerator.test_generate
  tuple(
    list([
      '/usr/bin/ymir',
      '-p',
      '/userdata/system/configs/ymir',
      '/userdata/roms/saturn/rom.cue',
    ]),
    dict({
    }),
  )
# ---
# name: TestYmirGenerator.test_generate[config]
  '''
  [General]
  BoostEmuThreadPriority = true
  BoostProcessPriority = true
  EnableRewindBuffer = false
  PauseWhenUnfocused = false
  PreloadDiscImagesToRAM = false
  RewindCompressionLevel = 12
  
  [System]
  AutoDetectRegion = true
  
  [Video]
  AutoResizeWindow = false
  Deinterlace = true
  FullScreen = true
  ForceAspectRatio = true
  DisplayVideoOutputInWindow = false
  ThreadedDeinterlacer = true
  ForceIntegerScaling = false
  ForcedAspect = 1.5
  TransparentMeshes = false
  Rotation = "Normal"
  
  [Input]
  GamepadAnalogToDigitalSensitivity = 0.20000000298023224
  GamepadLSDeadzone = 0.15000000596046448
  GamepadRSDeadzone = 0.15000000596046448
  
  [General.PathOverrides]
  BackupMemory = ""
  Dumps = ""
  ExportedBackups = ""
  IPLROMImages = "/userdata/bios"
  PersistentState = ""
  ROMCartImages = "/userdata/roms/saturn"
  SaveStates = "/userdata/saves/ymir"
  
  '''
# ---
# name: TestYmirGenerator.test_generate_config[{'ymir_aspect': '1.3333333333333333'}][config]
  '''
  [General]
  BoostEmuThreadPriority = true
  BoostProcessPriority = true
  EnableRewindBuffer = false
  PauseWhenUnfocused = false
  PreloadDiscImagesToRAM = false
  RewindCompressionLevel = 12
  
  [System]
  AutoDetectRegion = true
  
  [Video]
  AutoResizeWindow = false
  Deinterlace = true
  FullScreen = true
  ForceAspectRatio = true
  DisplayVideoOutputInWindow = false
  ThreadedDeinterlacer = true
  ForceIntegerScaling = false
  ForcedAspect = 1.3333333333333333
  TransparentMeshes = false
  Rotation = "Normal"
  
  [Input]
  GamepadAnalogToDigitalSensitivity = 0.20000000298023224
  GamepadLSDeadzone = 0.15000000596046448
  GamepadRSDeadzone = 0.15000000596046448
  
  [General.PathOverrides]
  BackupMemory = ""
  Dumps = ""
  ExportedBackups = ""
  IPLROMImages = "/userdata/bios"
  PersistentState = ""
  ROMCartImages = "/userdata/roms/saturn"
  SaveStates = "/userdata/saves/ymir"
  
  '''
# ---
# name: TestYmirGenerator.test_generate_config[{'ymir_aspect': '1.5'}][config]
  '''
  [General]
  BoostEmuThreadPriority = true
  BoostProcessPriority = true
  EnableRewindBuffer = false
  PauseWhenUnfocused = false
  PreloadDiscImagesToRAM = false
  RewindCompressionLevel = 12
  
  [System]
  AutoDetectRegion = true
  
  [Video]
  AutoResizeWindow = false
  Deinterlace = true
  FullScreen = true
  ForceAspectRatio = true
  DisplayVideoOutputInWindow = false
  ThreadedDeinterlacer = true
  ForceIntegerScaling = false
  ForcedAspect = 1.5
  TransparentMeshes = false
  Rotation = "Normal"
  
  [Input]
  GamepadAnalogToDigitalSensitivity = 0.20000000298023224
  GamepadLSDeadzone = 0.15000000596046448
  GamepadRSDeadzone = 0.15000000596046448
  
  [General.PathOverrides]
  BackupMemory = ""
  Dumps = ""
  ExportedBackups = ""
  IPLROMImages = "/userdata/bios"
  PersistentState = ""
  ROMCartImages = "/userdata/roms/saturn"
  SaveStates = "/userdata/saves/ymir"
  
  '''
# ---
# name: TestYmirGenerator.test_generate_config[{'ymir_aspect': '1.6'}][config]
  '''
  [General]
  BoostEmuThreadPriority = true
  BoostProcessPriority = true
  EnableRewindBuffer = false
  PauseWhenUnfocused = false
  PreloadDiscImagesToRAM = false
  RewindCompressionLevel = 12
  
  [System]
  AutoDetectRegion = true
  
  [Video]
  AutoResizeWindow = false
  Deinterlace = true
  FullScreen = true
  ForceAspectRatio = true
  DisplayVideoOutputInWindow = false
  ThreadedDeinterlacer = true
  ForceIntegerScaling = false
  ForcedAspect = 1.6
  TransparentMeshes = false
  Rotation = "Normal"
  
  [Input]
  GamepadAnalogToDigitalSensitivity = 0.20000000298023224
  GamepadLSDeadzone = 0.15000000596046448
  GamepadRSDeadzone = 0.15000000596046448
  
  [General.PathOverrides]
  BackupMemory = ""
  Dumps = ""
  ExportedBackups = ""
  IPLROMImages = "/userdata/bios"
  PersistentState = ""
  ROMCartImages = "/userdata/roms/saturn"
  SaveStates = "/userdata/saves/ymir"
  
  '''
# ---
# name: TestYmirGenerator.test_generate_config[{'ymir_aspect': '1.7777777777777778'}][config]
  '''
  [General]
  BoostEmuThreadPriority = true
  BoostProcessPriority = true
  EnableRewindBuffer = false
  PauseWhenUnfocused = false
  PreloadDiscImagesToRAM = false
  RewindCompressionLevel = 12
  
  [System]
  AutoDetectRegion = true
  
  [Video]
  AutoResizeWindow = false
  Deinterlace = true
  FullScreen = true
  ForceAspectRatio = true
  DisplayVideoOutputInWindow = false
  ThreadedDeinterlacer = true
  ForceIntegerScaling = false
  ForcedAspect = 1.777777777777778
  TransparentMeshes = false
  Rotation = "Normal"
  
  [Input]
  GamepadAnalogToDigitalSensitivity = 0.20000000298023224
  GamepadLSDeadzone = 0.15000000596046448
  GamepadRSDeadzone = 0.15000000596046448
  
  [General.PathOverrides]
  BackupMemory = ""
  Dumps = ""
  ExportedBackups = ""
  IPLROMImages = "/userdata/bios"
  PersistentState = ""
  ROMCartImages = "/userdata/roms/saturn"
  SaveStates = "/userdata/saves/ymir"
  
  '''
# ---
# name: TestYmirGenerator.test_generate_config[{'ymir_interlace': '0'}][config]
  '''
  [General]
  BoostEmuThreadPriority = true
  BoostProcessPriority = true
  EnableRewindBuffer = false
  PauseWhenUnfocused = false
  PreloadDiscImagesToRAM = false
  RewindCompressionLevel = 12
  
  [System]
  AutoDetectRegion = true
  
  [Video]
  AutoResizeWindow = false
  Deinterlace = false
  FullScreen = true
  ForceAspectRatio = true
  DisplayVideoOutputInWindow = false
  ThreadedDeinterlacer = true
  ForceIntegerScaling = false
  ForcedAspect = 1.5
  TransparentMeshes = false
  Rotation = "Normal"
  
  [Input]
  GamepadAnalogToDigitalSensitivity = 0.20000000298023224
  GamepadLSDeadzone = 0.15000000596046448
  GamepadRSDeadzone = 0.15000000596046448
  
  [General.PathOverrides]
  BackupMemory = ""
  Dumps = ""
  ExportedBackups = ""
  IPLROMImages = "/userdata/bios"
  PersistentState = ""
  ROMCartImages = "/userdata/roms/saturn"
  SaveStates = "/userdata/saves/ymir"
  
  '''
# ---
# name: TestYmirGenerator.test_generate_config[{'ymir_interlace': '1'}][config]
  '''
  [General]
  BoostEmuThreadPriority = true
  BoostProcessPriority = true
  EnableRewindBuffer = false
  PauseWhenUnfocused = false
  PreloadDiscImagesToRAM = false
  RewindCompressionLevel = 12
  
  [System]
  AutoDetectRegion = true
  
  [Video]
  AutoResizeWindow = false
  Deinterlace = true
  FullScreen = true
  ForceAspectRatio = true
  DisplayVideoOutputInWindow = false
  ThreadedDeinterlacer = true
  ForceIntegerScaling = false
  ForcedAspect = 1.5
  TransparentMeshes = false
  Rotation = "Normal"
  
  [Input]
  GamepadAnalogToDigitalSensitivity = 0.20000000298023224
  GamepadLSDeadzone = 0.15000000596046448
  GamepadRSDeadzone = 0.15000000596046448
  
  [General.PathOverrides]
  BackupMemory = ""
  Dumps = ""
  ExportedBackups = ""
  IPLROMImages = "/userdata/bios"
  PersistentState = ""
  ROMCartImages = "/userdata/roms/saturn"
  SaveStates = "/userdata/saves/ymir"
  
  '''
# ---
# name: TestYmirGenerator.test_generate_config[{'ymir_meshes': '0'}][config]
  '''
  [General]
  BoostEmuThreadPriority = true
  BoostProcessPriority = true
  EnableRewindBuffer = false
  PauseWhenUnfocused = false
  PreloadDiscImagesToRAM = false
  RewindCompressionLevel = 12
  
  [System]
  AutoDetectRegion = true
  
  [Video]
  AutoResizeWindow = false
  Deinterlace = true
  FullScreen = true
  ForceAspectRatio = true
  DisplayVideoOutputInWindow = false
  ThreadedDeinterlacer = true
  ForceIntegerScaling = false
  ForcedAspect = 1.5
  TransparentMeshes = false
  Rotation = "Normal"
  
  [Input]
  GamepadAnalogToDigitalSensitivity = 0.20000000298023224
  GamepadLSDeadzone = 0.15000000596046448
  GamepadRSDeadzone = 0.15000000596046448
  
  [General.PathOverrides]
  BackupMemory = ""
  Dumps = ""
  ExportedBackups = ""
  IPLROMImages = "/userdata/bios"
  PersistentState = ""
  ROMCartImages = "/userdata/roms/saturn"
  SaveStates = "/userdata/saves/ymir"
  
  '''
# ---
# name: TestYmirGenerator.test_generate_config[{'ymir_meshes': '1'}][config]
  '''
  [General]
  BoostEmuThreadPriority = true
  BoostProcessPriority = true
  EnableRewindBuffer = false
  PauseWhenUnfocused = false
  PreloadDiscImagesToRAM = false
  RewindCompressionLevel = 12
  
  [System]
  AutoDetectRegion = true
  
  [Video]
  AutoResizeWindow = false
  Deinterlace = true
  FullScreen = true
  ForceAspectRatio = true
  DisplayVideoOutputInWindow = false
  ThreadedDeinterlacer = true
  ForceIntegerScaling = false
  ForcedAspect = 1.5
  TransparentMeshes = true
  Rotation = "Normal"
  
  [Input]
  GamepadAnalogToDigitalSensitivity = 0.20000000298023224
  GamepadLSDeadzone = 0.15000000596046448
  GamepadRSDeadzone = 0.15000000596046448
  
  [General.PathOverrides]
  BackupMemory = ""
  Dumps = ""
  ExportedBackups = ""
  IPLROMImages = "/userdata/bios"
  PersistentState = ""
  ROMCartImages = "/userdata/roms/saturn"
  SaveStates = "/userdata/saves/ymir"
  
  '''
# ---
# name: TestYmirGenerator.test_generate_config[{'ymir_rotation': '90CW'}][config]
  '''
  [General]
  BoostEmuThreadPriority = true
  BoostProcessPriority = true
  EnableRewindBuffer = false
  PauseWhenUnfocused = false
  PreloadDiscImagesToRAM = false
  RewindCompressionLevel = 12
  
  [System]
  AutoDetectRegion = true
  
  [Video]
  AutoResizeWindow = false
  Deinterlace = true
  FullScreen = true
  ForceAspectRatio = true
  DisplayVideoOutputInWindow = false
  ThreadedDeinterlacer = true
  ForceIntegerScaling = false
  ForcedAspect = 1.5
  TransparentMeshes = false
  Rotation = "90CW"
  
  [Input]
  GamepadAnalogToDigitalSensitivity = 0.20000000298023224
  GamepadLSDeadzone = 0.15000000596046448
  GamepadRSDeadzone = 0.15000000596046448
  
  [General.PathOverrides]
  BackupMemory = ""
  Dumps = ""
  ExportedBackups = ""
  IPLROMImages = "/userdata/bios"
  PersistentState = ""
  ROMCartImages = "/userdata/roms/saturn"
  SaveStates = "/userdata/saves/ymir"
  
  '''
# ---
# name: TestYmirGenerator.test_generate_config[{'ymir_rotation': 'Normal'}][config]
  '''
  [General]
  BoostEmuThreadPriority = true
  BoostProcessPriority = true
  EnableRewindBuffer = false
  PauseWhenUnfocused = false
  PreloadDiscImagesToRAM = false
  RewindCompressionLevel = 12
  
  [System]
  AutoDetectRegion = true
  
  [Video]
  AutoResizeWindow = false
  Deinterlace = true
  FullScreen = true
  ForceAspectRatio = true
  DisplayVideoOutputInWindow = false
  ThreadedDeinterlacer = true
  ForceIntegerScaling = false
  ForcedAspect = 1.5
  TransparentMeshes = false
  Rotation = "Normal"
  
  [Input]
  GamepadAnalogToDigitalSensitivity = 0.20000000298023224
  GamepadLSDeadzone = 0.15000000596046448
  GamepadRSDeadzone = 0.15000000596046448
  
  [General.PathOverrides]
  BackupMemory = ""
  Dumps = ""
  ExportedBackups = ""
  IPLROMImages = "/userdata/bios"
  PersistentState = ""
  ROMCartImages = "/userdata/roms/saturn"
  SaveStates = "/userdata/saves/ymir"
  
  '''
# ---
# name: TestYmirGenerator.test_generate_controllers[config]
  '''
  [General]
  BoostEmuThreadPriority = true
  BoostProcessPriority = true
  EnableRewindBuffer = false
  PauseWhenUnfocused = false
  PreloadDiscImagesToRAM = false
  RewindCompressionLevel = 12
  
  [System]
  AutoDetectRegion = true
  
  [Video]
  AutoResizeWindow = false
  Deinterlace = true
  FullScreen = true
  ForceAspectRatio = true
  DisplayVideoOutputInWindow = false
  ThreadedDeinterlacer = true
  ForceIntegerScaling = false
  ForcedAspect = 1.5
  TransparentMeshes = false
  Rotation = "Normal"
  
  [Input]
  GamepadAnalogToDigitalSensitivity = 0.20000000298023224
  GamepadLSDeadzone = 0.15000000596046448
  GamepadRSDeadzone = 0.15000000596046448
  
  [General.PathOverrides]
  BackupMemory = ""
  Dumps = ""
  ExportedBackups = ""
  IPLROMImages = "/userdata/bios"
  PersistentState = ""
  ROMCartImages = "/userdata/roms/saturn"
  SaveStates = "/userdata/saves/ymir"
  
  [Input.Port1]
  PeripheralType = "AnalogPad"
  DevicePath = "/dev/input/event1"
  
  [Input.Port2]
  PeripheralType = "AnalogPad"
  DevicePath = "/dev/input/event2"
  
  [Input.Port1.AnalogPad.Binds]
  A = [ "J", "GamepadX@0",]
  B = [ "K", "GamepadA@0",]
  C = [ "L", "GamepadB@0",]
  X = [ "U", "GamepadLeftBumper@0",]
  Y = [ "I", "GamepadY@0",]
  Z = [ "O", "GamepadRightBumper@0",]
  L = [ "Q",]
  R = [ "E",]
  Up = [ "W",]
  Down = [ "S",]
  Left = [ "A",]
  Right = [ "D",]
  Start = [ "F", "G", "H", "GamepadStart@0",]
  SwitchMode = [ "Ctrl+B", "GamepadLeftThumb@0",]
  DPad = [ "GamepadDPad@0",]
  AnalogStick = [ "GamepadLeftStick@0",]
  AnalogL = [ "GamepadLeftTrigger@0",]
  AnalogR = [ "GamepadRightTrigger@0",]
  
  [Input.Port2.AnalogPad.Binds]
  A = [ "KeyPad1", "GamepadX@1",]
  B = [ "KeyPad2", "GamepadA@1",]
  C = [ "KeyPad3", "GamepadB@1",]
  X = [ "KeyPad4", "GamepadLeftBumper@1",]
  Y = [ "KeyPad5", "GamepadY@1",]
  Z = [ "KeyPad6", "GamepadRightBumper@1",]
  L = [ "Insert", "KeyPad7",]
  R = [ "PageUp", "KeyPad9",]
  Up = [ "Home", "Up",]
  Down = [ "End", "Down",]
  Left = [ "Delete", "Left",]
  Right = [ "PageDown", "Right",]
  Start = [ "KeyPadEnter", "GamepadStart@1",]
  SwitchMode = [ "KeyPadAdd", "GamepadLeftThumb@1",]
  DPad = [ "GamepadDPad@1",]
  AnalogStick = [ "GamepadLeftStick@1",]
  AnalogL = [ "GamepadLeftTrigger@1",]
  AnalogR = [ "GamepadRightTrigger@1",]
  
  '''
# ---
# name: TestYmirGenerator.test_generate_existing[config]
  '''
  [General]
  BoostEmuThreadPriority = true
  BoostProcessPriority = true
  EnableRewindBuffer = false
  PauseWhenUnfocused = false
  PreloadDiscImagesToRAM = false
  RewindCompressionLevel = 12
  
  [System]
  AutoDetectRegion = true
  
  [Video]
  AutoResizeWindow = false
  Deinterlace = true
  FullScreen = true
  ForceAspectRatio = true
  DisplayVideoOutputInWindow = false
  ForcedAspect = 1.5
  ThreadedDeinterlacer = true
  ForceIntegerScaling = false
  TransparentMeshes = false
  Rotation = "Normal"
  
  [Input]
  GamepadAnalogToDigitalSensitivity = 0.20000000298023224
  GamepadLSDeadzone = 0.15000000596046448
  GamepadRSDeadzone = 0.15000000596046448
  
  [General.PathOverrides]
  BackupMemory = ""
  Dumps = ""
  ExportedBackups = ""
  IPLROMImages = "/userdata/bios"
  PersistentState = ""
  ROMCartImages = "/userdata/roms/saturn"
  SaveStates = "/userdata/saves/ymir"
  
  '''
# ---
# name: TestYmirGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': 'killall -9 ymir',
      'restore_state': 'KEY_F3',
      'save_state': 'KEY_F2',
    }),
    'name': 'ymir',
  })
# ---
